Added CreditRating Smart Contract to manage all the flows for Credit Rating Document
