# IndiaCP_SwaggerSpecificaiton/src/main/java/com/barclays/indiacp/model/BoardResolutionBorrowingLimitDocument.java
@@ -28,6 +28,7 @@ package com.barclays.indiacp.model;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonValue;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import java.util.Date;
@@ -35,7 +36,7 @@ import java.util.Date;
 /**
  * BoardResolutionBorrowingLimitDocument
  */
-@javax.annotation.Generated(value = "class io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2017-01-06T23:16:51.945Z")
+@javax.annotation.Generated(value = "class io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2017-01-08T11:59:45.052Z")
 public class BoardResolutionBorrowingLimitDocument   {
   @JsonProperty("legalEntityId")
   private String legalEntityId = null;
@@ -49,11 +50,51 @@ public class BoardResolutionBorrowingLimitDocument   {
   @JsonProperty("boardResolutionExpiryDate")
   private Date boardResolutionExpiryDate = null;
 
+  @JsonProperty("docHash")
+  private String docHash = null;
+
+  @JsonProperty("version")
+  private Integer version = null;
+
   @JsonProperty("modifiedBy")
   private String modifiedBy = null;
 
   @JsonProperty("lastModifiedDate")
   private Date lastModifiedDate = null;
+
+  /**
+   * There can be only one active CR Document at any given time
+   */
+  public enum StatusEnum {
+    ACTIVE("ACTIVE"),
+    
+    OBSOLETE("OBSOLETE");
+
+    private String value;
+
+    StatusEnum(String value) {
+      this.value = value;
+    }
+
+    @Override
+    @JsonValue
+    public String toString() {
+      return String.valueOf(value);
+    }
+
+    @JsonCreator
+    public static StatusEnum fromValue(String text) {
+      for (StatusEnum b : StatusEnum.values()) {
+        if (String.valueOf(b.value).equals(text)) {
+          return b;
+        }
+      }
+      return null;
+    }
+  }
+
+  @JsonProperty("status")
+  private StatusEnum status = null;
 
   public BoardResolutionBorrowingLimitDocument legalEntityId(String legalEntityId) {
     this.legalEntityId = legalEntityId;
@@ -127,6 +168,42 @@ public class BoardResolutionBorrowingLimitDocument   {
     this.boardResolutionExpiryDate = boardResolutionExpiryDate;
   }
 
+  public BoardResolutionBorrowingLimitDocument docHash(String docHash) {
+    this.docHash = docHash;
+    return this;
+  }
+
+   /**
+   * SHA256 Hash of the Credit Rating Document
+   * @return docHash
+  **/
+  @ApiModelProperty(value = "SHA256 Hash of the Credit Rating Document")
+  public String getDocHash() {
+    return docHash;
+  }
+
+  public void setDocHash(String docHash) {
+    this.docHash = docHash;
+  }
+
+  public BoardResolutionBorrowingLimitDocument version(Integer version) {
+    this.version = version;
+    return this;
+  }
+
+   /**
+   * Current version of the CR Document. This is auto incremented by the DL.
+   * @return version
+  **/
+  @ApiModelProperty(value = "Current version of the CR Document. This is auto incremented by the DL.")
+  public Integer getVersion() {
+    return version;
+  }
+
+  public void setVersion(Integer version) {
+    this.version = version;
+  }
+
   public BoardResolutionBorrowingLimitDocument modifiedBy(String modifiedBy) {
     this.modifiedBy = modifiedBy;
     return this;
@@ -163,6 +240,24 @@ public class BoardResolutionBorrowingLimitDocument   {
     this.lastModifiedDate = lastModifiedDate;
   }
 
+  public BoardResolutionBorrowingLimitDocument status(StatusEnum status) {
+    this.status = status;
+    return this;
+  }
+
+   /**
+   * There can be only one active CR Document at any given time
+   * @return status
+  **/
+  @ApiModelProperty(value = "There can be only one active CR Document at any given time")
+  public StatusEnum getStatus() {
+    return status;
+  }
+
+  public void setStatus(StatusEnum status) {
+    this.status = status;
+  }
+
 
   @Override
   public boolean equals(Object o) {
@@ -177,13 +272,16 @@ public class BoardResolutionBorrowingLimitDocument   {
         Objects.equals(this.boardResolutionBorrowingLimit, boardResolutionBorrowingLimitDocument.boardResolutionBorrowingLimit) &&
         Objects.equals(this.boardResolutionIssuanceDate, boardResolutionBorrowingLimitDocument.boardResolutionIssuanceDate) &&
         Objects.equals(this.boardResolutionExpiryDate, boardResolutionBorrowingLimitDocument.boardResolutionExpiryDate) &&
+        Objects.equals(this.docHash, boardResolutionBorrowingLimitDocument.docHash) &&
+        Objects.equals(this.version, boardResolutionBorrowingLimitDocument.version) &&
         Objects.equals(this.modifiedBy, boardResolutionBorrowingLimitDocument.modifiedBy) &&
-        Objects.equals(this.lastModifiedDate, boardResolutionBorrowingLimitDocument.lastModifiedDate);
+        Objects.equals(this.lastModifiedDate, boardResolutionBorrowingLimitDocument.lastModifiedDate) &&
+        Objects.equals(this.status, boardResolutionBorrowingLimitDocument.status);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(legalEntityId, boardResolutionBorrowingLimit, boardResolutionIssuanceDate, boardResolutionExpiryDate, modifiedBy, lastModifiedDate);
+    return Objects.hash(legalEntityId, boardResolutionBorrowingLimit, boardResolutionIssuanceDate, boardResolutionExpiryDate, docHash, version, modifiedBy, lastModifiedDate, status);
   }
 
 
@@ -196,8 +294,11 @@ public class BoardResolutionBorrowingLimitDocument   {
     sb.append("    boardResolutionBorrowingLimit: ").append(toIndentedString(boardResolutionBorrowingLimit)).append("\n");
     sb.append("    boardResolutionIssuanceDate: ").append(toIndentedString(boardResolutionIssuanceDate)).append("\n");
     sb.append("    boardResolutionExpiryDate: ").append(toIndentedString(boardResolutionExpiryDate)).append("\n");
+    sb.append("    docHash: ").append(toIndentedString(docHash)).append("\n");
+    sb.append("    version: ").append(toIndentedString(version)).append("\n");
     sb.append("    modifiedBy: ").append(toIndentedString(modifiedBy)).append("\n");
     sb.append("    lastModifiedDate: ").append(toIndentedString(lastModifiedDate)).append("\n");
+    sb.append("    status: ").append(toIndentedString(status)).append("\n");
     sb.append("}");
     return sb.toString();
   }
